--- a/sandbox.html
+++ b/sandbox.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<script src="classes.js"></script>
-<script src="jquery-2.1.4.min.js"></script>
+<script src="./js/classes.js"></script>
+<script src="./js/jquery-2.1.4.min.js"></script>
 </head>
 <body>
   <div id="Laden"></div>
